--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,9 +1,9 @@
 <section class="section catalog-watch">
-  <div class="container">
+  <div class="container" data-aos="fade-right">
     <h2 id="catalog" class="catalog-box-title">Catalog</h2>
     <ul class="catalog-list">
       <!-- watch model 1-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -51,7 +51,7 @@
         </div>
       </li>
       <!-- watch model 2-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -97,7 +97,7 @@
         </div>
       </li>
       <!-- watch model 3-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -145,7 +145,7 @@
         </div>
       </li>
       <!-- watch model 4-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -193,7 +193,7 @@
         </div>
       </li>
       <!-- watch model 5-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -239,7 +239,7 @@
         </div>
       </li>
       <!-- watch model 6-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -285,7 +285,7 @@
         </div>
       </li>
       <!-- watch model 7-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -333,7 +333,7 @@
         </div>
       </li>
       <!-- watch model 8-->
-      <li class="content-item">
+      <li class="content-item" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -379,7 +379,7 @@
         </div>
       </li>
       <!-- watch model 9-->
-      <li class="content-item model-watch">
+      <li class="content-item model-watch" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -425,7 +425,7 @@
         </div>
       </li>
       <!-- watch model 10-->
-      <li class="content-item model-watch">
+      <li class="content-item model-watch" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -471,7 +471,7 @@
         </div>
       </li>
       <!-- watch model 11-->
-      <li class="content-item model-watch">
+      <li class="content-item model-watch" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -517,7 +517,7 @@
         </div>
       </li>
       <!-- watch model 12-->
-      <li class="content-item model-watch">
+      <li class="content-item model-watch" data-aos="fade-up">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
