--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -563,6 +563,8 @@
         </div>
       </li>
     </ul>
-    <button type="button" class="js-open-modal catalog-button">Buy now</button>
+    <button type="button" class="catalog-button" data-modal-open>
+      Buy now
+    </button>
   </div>
 </section>
