--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,3 +26,5 @@
 @import url('./footer.css');
 /** Buy now (popup) */
 @import url('./popup.css');
+/** Scroll button*/
+@import url('./scroll.css');
