--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" data-aos="fade-up">
   <div class="footer-container container">
     <div class="footer-information">
       <div class="footer-thumb">
