--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,22 @@
 <header class="header">
   <div class="header-nav container">
     <nav class="header-nav">
-      <a class="header-logo-link" href="./index.html">thewatchspot</a>
+      <a
+        class="header-logo-link animate__animated animate__fadeIn"
+        href="./index.html"
+        >thewatchspot</a
+      >
       <ul class="site-nav list">
         <li><a href="#about">About us</a></li>
         <li><a href="#catalog">Catalog</a></li>
         <li><a href="#sale">Sale</a></li>
       </ul>
     </nav>
-    <button data-menu-open type="button" class="mobile-menu-open">
+    <button
+      data-menu-open
+      type="button"
+      class="mobile-menu-open animate__animated animate__fadeIn"
+    >
       <svg class="mobile-menu-open-icon" width="24" height="24">
         <use href="./img/icons.svg#icon-mobile-menu"></use>
       </svg>
