--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,9 @@
 <section class="hero section">
   <div class="hero-container container">
     <div class="hero_text-title-div">
-      <h1 class="hero_title">Welcome to our collection of premium watches</h1>
+      <h1 class="hero_title animate__animated animate__fadeInLeft">
+        Welcome to our collection of premium watches
+      </h1>
     </div>
     <div class="hero_swiper_images-div">
       <div class="hero_div">
@@ -75,7 +77,7 @@
           </div>
         </div>
         <!--======Swiper======-->
-        <p class="hero_text">
+        <p class="hero_text animate__animated animate__fadeInRight">
           Our watches are not just timepieces, but also an expression of your
           personality and lifestyle. From classic designs to modern ones, we
           have a watch to suit every taste and occasion.
