--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,8 +1,12 @@
 <section class="sale-section section">
-  <div class="sale-container container">
+  <div class="sale-container container" data-aos="fade-right">
     <h2 id="sale" class="sale-title">Sale</h2>
     <div class="extra-sale-container">
-      <div class="sale-list-container">
+      <div
+        class="sale-list-container"
+        data-aos="fade-right"
+        data-aos-duration="400"
+      >
         <ul class="sale-list">
           <li class="sale-item">
             <picture>
@@ -101,7 +105,7 @@
           </li>
         </ul>
       </div>
-      <div class="sale-thumb">
+      <div class="sale-thumb" data-aos="fade-down">
         <h3 class="sale-subtitle">Greenlane Watch By Police For MenHT</h3>
         <p class="sale-tag">Product tag: PEWJK2227003</p>
         <span class="new-price">€700</span>
