--- a/src/partials/watches.html
+++ b/src/partials/watches.html
@@ -1,66 +1,71 @@
-  <section class="section watches">
-      <div class="container">
-        <h2 class="watches-title">New watches</h2>
-        <p class="watches-pre-title">
-          Green And Bronze—The Match Made In Heaven
-        </p>
+<section class="section watches">
+  <div class="container" data-aos="fade-right">
+    <h2 class="watches-title">New watches</h2>
+    <p class="watches-pre-title">Green And Bronze—The Match Made In Heaven</p>
 
-        <div class="new-watches-list">
-          <picture>
-            <source
-              srcset="
-                ./img/new_watches/new-green-model.jpg    1x,
-                ./img/new_watches/new-green-model@2x.jpg 2x
-              "
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="
-                ./img/new_watches/new-green-model-tablet.jpg    1x,
-                ./img/new_watches/new-green-model-tablet@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+    <div class="new-watches-list">
+      <picture
+        data-aos="fade-right"
+        data-aos-duration="400"
+        data-aos-delay="200"
+      >
+        <source
+          srcset="
+            ./img/new_watches/new-green-model.jpg    1x,
+            ./img/new_watches/new-green-model@2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/new_watches/new-green-model-tablet.jpg    1x,
+            ./img/new_watches/new-green-model-tablet@2x.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
 
-            <source
-              srcset="
-                ./img/new_watches/new-green-model-mobile.jpg    1x,
-                ./img/new_watches/new-green-model-mobile@2x.jpg 2x
-              "
-            />
-            <img
-              src="./img/new_watches/new-green-model-mobile.jpg"
-              alt="Green model"
-            />
-          </picture>
+        <source
+          srcset="
+            ./img/new_watches/new-green-model-mobile.jpg    1x,
+            ./img/new_watches/new-green-model-mobile@2x.jpg 2x
+          "
+        />
+        <img
+          src="./img/new_watches/new-green-model-mobile.jpg"
+          alt="Green model"
+        />
+      </picture>
 
-          <picture>
-            <source
-              srcset="
-                ./img/new_watches/new-black-model.jpg    1x,
-                ./img/new_watches/new-black-model@2x.jpg 2x
-              "
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="
-                ./img/new_watches/new-black-model-tablet.jpg    1x,
-                ./img/new_watches/new-black-model-tablet@2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="
-                ./img/new_watches/new-black-model-mobile.jpg    1x,
-                ./img/new_watches/new-black-model-mobile@2x.jpg 2x
-              "
-            />
-            <img
-              src="./img/new_watches/new-black-model-mobile.jpg"
-              alt="Black model"
-            />
-          </picture>
-        </div>
-      </div>
-    </section>
-
+      <picture
+        data-aos="fade-left"
+        data-aos-duration="400"
+        data-aos-delay="200"
+      >
+        <source
+          srcset="
+            ./img/new_watches/new-black-model.jpg    1x,
+            ./img/new_watches/new-black-model@2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/new_watches/new-black-model-tablet.jpg    1x,
+            ./img/new_watches/new-black-model-tablet@2x.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./img/new_watches/new-black-model-mobile.jpg    1x,
+            ./img/new_watches/new-black-model-mobile@2x.jpg 2x
+          "
+        />
+        <img
+          src="./img/new_watches/new-black-model-mobile.jpg"
+          alt="Black model"
+        />
+      </picture>
+    </div>
+  </div>
+</section>
