--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -40,13 +40,13 @@
   margin-bottom: 40px;
 }
 
-.logo-link > img {
+.logo-link>img {
   width: 40px;
   height: 40px;
 }
 
 @media screen and (min-width: 768px) {
-  .logo-link > img {
+  .logo-link>img {
     width: 50px;
     height: 50px;
   }
@@ -69,7 +69,7 @@
   }
 }
 
-.contact-item > a {
+.contact-item>a {
   transition: color var(--typical-transition);
 }
 
@@ -77,7 +77,7 @@
   margin-bottom: 20px;
 }
 
-.contact-item > a:hover {
+.contact-item>a:hover {
   color: var(--color-white-alpha);
 }
 
@@ -115,11 +115,11 @@
   }
 }
 
-.footer-nav-item > a {
+.footer-nav-item>a {
   transition: color var(--typical-transition);
 }
 
-.footer-nav-item > a:hover {
+.footer-nav-item>a:hover {
   color: var(--color-white-alpha);
 }
 
@@ -140,6 +140,8 @@
 
   border: 1px solid var(--color-border-alpha);
   border-radius: 10px;
+
+  transition: background-color var(--typical-transition);
 }
 
 .footer-social-link {
@@ -155,12 +157,16 @@
   }
 }
 
-.footer-social-link .footer-social-icon {
-  transition: fill var(--typical-transition);
+.footer-social-item:nth-child(1):hover {
+  background-color: #3d5b99;
 }
 
-.footer-social-link:hover .footer-social-icon {
-  fill: var(--color-white-alpha);
+.footer-social-item:nth-child(2):hover {
+  background-color: #A1755C;
+}
+
+.footer-social-item:nth-child(3):hover {
+  background-color: #e64a41;
 }
 
 .footer-social-icon {
