--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="about section">
   <div class="about_container container">
-    <div class="about_div">
+    <div class="about_div" data-aos="fade-right">
       <div class="about_title_text">
         <h2 id="about" class="about_title">About us</h2>
         <ul class="about_list">
