--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -11,6 +11,11 @@
     z-index: 2;
 }
 
+/* No-scroll for modal */
+.no-scroll {
+overflow-y: hidden;
+}
+
 /* .is-hidden {
     opacity: 0;
     visibility: hidden;
@@ -52,12 +57,12 @@
 }
 
 .modal-img {
-    margin-bottom: 14px;
+    margin-bottom: 39px;
 }
 
 .modal-text {
+    font-size: 14px;
     line-height: 1.29;
-    letter-spacing: -.02em;
     font-weight: 400;
     color: #141414;
     margin-bottom: 4px;
@@ -95,6 +100,7 @@
     padding: 12px 16px;
     border: 1px solid rgb(20, 20, 20, .5);
     border-radius: 8px;
+    font-size: 14px;
     line-height: 1.29;
     letter-spacing: -.02em;
     color: #141414;
@@ -114,15 +120,14 @@
 
 .submit-btn {
     width: 100%;
-    padding: 18px 116px;
     margin-bottom: 12px;
     background: #1E2827;
     border-color: transparent;
     border-radius: 8px;
     font-size: 12px;
+    padding: 18px;
     line-height: 1.17;
     font-weight: 400;
-    text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;;
     transition: border var(--typical-transition), box-shadow var(--typical-transition);
@@ -240,9 +245,10 @@
         right: 20px;
         width: 24px;
         height: 24px;
-    }
+    }   
 
     .modal-label {
+        font-size: 14px;
         line-height: 1.29;
     }
 
@@ -273,12 +279,6 @@
     /* .backdrop.is-hidden .modal {
         transform: translate(-50%, -50%) scaleY(0)
     } */
-
-    .modal-text {
-        overflow: hidden;
-        white-space: normal;
-        text-overflow: ellipsis;
-    }
 
     .input-group {
         margin-bottom: 24px;
