--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="header-nav container">
+  <div class="header-container container">
     <nav class="header-nav">
       <a
         class="header-logo-link animate__animated animate__fadeIn"
@@ -21,9 +21,7 @@
         <use href="./img/icons.svg#icon-mobile-menu"></use>
       </svg>
     </button>
-    <address class="header-address header-nav list">
-      <a class="button-address" href="tel:+380684439426">+380 (68) 443-94-26</a>
-    </address>
+    <a class="button-address" href="tel:+380684439426">+380 (68) 443-94-26</a>
   </div>
   <div data-menu class="mobile-menu data-menu">
     <div class="mobile-menu-container container">
