--- a/src/css/base/fonts.css
+++ b/src/css/base/fonts.css
@@ -5,17 +5,17 @@
     font-family: 'Epilogue';
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/epilogue-v17-latin-300.eot');
+    src: url('./fonts/epilogue-v17-latin-300.eot');
     /* IE9 Compat Modes */
-    src: url('../fonts/epilogue-v17-latin-300.eot?#iefix') format('embedded-opentype'),
+    src: url('./fonts/epilogue-v17-latin-300.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/epilogue-v17-latin-300.woff2') format('woff2'),
+        url('./fonts/epilogue-v17-latin-300.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/epilogue-v17-latin-300.woff') format('woff'),
+        url('./fonts/epilogue-v17-latin-300.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/epilogue-v17-latin-300.ttf') format('truetype'),
+        url('./fonts/epilogue-v17-latin-300.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/epilogue-v17-latin-300.svg#Epilogue') format('svg');
+        url('./fonts/epilogue-v17-latin-300.svg#Epilogue') format('svg');
     /* Legacy iOS */
 }
 
@@ -26,17 +26,17 @@
     font-family: 'Epilogue';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/epilogue-v17-latin-regular.eot');
+    src: url('./fonts/epilogue-v17-latin-regular.eot');
     /* IE9 Compat Modes */
-    src: url('../fonts/epilogue-v17-latin-regular.eot?#iefix') format('embedded-opentype'),
+    src: url('./fonts/epilogue-v17-latin-regular.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/epilogue-v17-latin-regular.woff2') format('woff2'),
+        url('./fonts/epilogue-v17-latin-regular.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/epilogue-v17-latin-regular.woff') format('woff'),
+        url('./fonts/epilogue-v17-latin-regular.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/epilogue-v17-latin-regular.ttf') format('truetype'),
+        url('./fonts/epilogue-v17-latin-regular.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/epilogue-v17-latin-regular.svg#Epilogue') format('svg');
+        url('./fonts/epilogue-v17-latin-regular.svg#Epilogue') format('svg');
     /* Legacy iOS */
 }
 
@@ -47,16 +47,16 @@
     font-family: 'Epilogue';
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/epilogue-v17-latin-600.eot');
+    src: url('./fonts/epilogue-v17-latin-600.eot');
     /* IE9 Compat Modes */
-    src: url('../fonts/epilogue-v17-latin-600.eot?#iefix') format('embedded-opentype'),
+    src: url('./fonts/epilogue-v17-latin-600.eot?#iefix') format('embedded-opentype'),
         /* IE6-IE8 */
-        url('../fonts/epilogue-v17-latin-600.woff2') format('woff2'),
+        url('./fonts/epilogue-v17-latin-600.woff2') format('woff2'),
         /* Super Modern Browsers */
-        url('../fonts/epilogue-v17-latin-600.woff') format('woff'),
+        url('./fonts/epilogue-v17-latin-600.woff') format('woff'),
         /* Modern Browsers */
-        url('../fonts/epilogue-v17-latin-600.ttf') format('truetype'),
+        url('./fonts/epilogue-v17-latin-600.ttf') format('truetype'),
         /* Safari, Android, iOS */
-        url('../fonts/epilogue-v17-latin-600.svg#Epilogue') format('svg');
+        url('./fonts/epilogue-v17-latin-600.svg#Epilogue') format('svg');
     /* Legacy iOS */
 }
