--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -126,7 +126,12 @@
 .footer-social-list {
   display: flex;
   gap: 14px;
-  margin-bottom: 80px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer-social-list {
+    margin-bottom: 80px;
+  }
 }
 
 @media screen and (min-width: 768px) {
