--- a/src/css/header.css
+++ b/src/css/header.css
@@ -12,11 +12,15 @@
   }
 }
 
-.header-nav {
+.header-container {
   position: relative;
   display: flex;
+  justify-content: space-between;
+}
+
+.header-nav {
+  display: flex;
   align-items: center;
-  width: 100%;
 }
 
 .header-logo-link {
@@ -51,7 +55,6 @@
 }
 
 .site-nav {
-  width: 180px;
   font-weight: 400;
   font-size: 9px;
   line-height: 1.33;
@@ -86,10 +89,6 @@
 
 @media screen and (max-width:768px) {
   .site-nav {
-    display: none;
-  }
-
-  .header-address {
     display: none;
   }
 
@@ -191,7 +190,7 @@
 
 .site-nav-mobile {
   position: absolute;
-  top: 50%;
+  top: 253px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
