--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -13,14 +13,14 @@
 
 /* No-scroll for modal */
 .no-scroll {
-overflow-y: hidden;
+    overflow-y: hidden;
 }
 
 .is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-} 
+}
 
 .modal {
     position: absolute;
@@ -36,7 +36,7 @@ overflow-y: hidden;
 
 .backdrop.is-hidden .modal {
     transform: scale(0);
-} 
+}
 
 .modal-btn-close {
     position: absolute;
@@ -111,6 +111,7 @@ overflow-y: hidden;
 }
 
 .modal-textarea {
+    display: block;
     width: 100%;
     height: 170px;
     padding-top: 12px;
@@ -129,7 +130,8 @@ overflow-y: hidden;
     line-height: 1.17;
     font-weight: 400;
     text-transform: uppercase;
-    color: #FFFFFF;;
+    color: #FFFFFF;
+    ;
     transition: border var(--typical-transition), box-shadow var(--typical-transition);
 }
 
@@ -245,7 +247,7 @@ overflow-y: hidden;
         right: 20px;
         width: 24px;
         height: 24px;
-    }   
+    }
 
     .modal-label {
         font-size: 14px;
