--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
     </button>
     <a class="button-address" href="tel:+380684439426">+380 (68) 443-94-26</a>
   </div>
-  <div data-menu class="mobile-menu data-menu">
+  <div data-menu class="mobile-menu">
     <div class="mobile-menu-container container">
       <div class="header-nav-mobile">
         <a class="header-logo-link" href="./index.html">thewatchspot</a>
