--- a/src/partials/popup.html
+++ b/src/partials/popup.html
@@ -6,21 +6,7 @@
         <use href="./img/icons.svg#icon-close"></use>
       </svg>
     </button>
-    <div class="modal-card">
-      <img
-        srcset="
-          ./img/catalog/catalog-model1.png    1x,
-          ./img/catalog/catalog-model1@2x.png 2x
-        "
-        src="./img/catalog/catalog-model1.png"
-        alt="watch"
-        class="modal-img"
-        width="276"
-        height="274"
-      />
-      <p class="modal-text">Tube Watch S42 Date Steel With Black Case</p>
-      <span class="price">€395</span>
-    </div>
+    <div class="modal-card"></div>
 
     <form class="modal-form">
       <div class="input-group">
@@ -31,6 +17,7 @@
           class="modal-input"
           id="text"
           placeholder="Enter your full name"
+          minlength="3"
           required
         />
       </div>
@@ -53,6 +40,8 @@
           class="modal-input"
           id="card-number"
           placeholder="Enter card"
+          pattern="[0-9]*"
+          minlength="12"
           required
         />
       </div>
